# LLM-Gateway-with-Cost-Control-Fallback-Routing

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: backends.yaml  budgets.yaml  circuit_breaker.yaml  routing_policy.yaml
dashboard/: app.py
docs/: DEMO_SCRIPT.md
gateway/: __init__.py  auth.py  config_manager.py  main.py
gateway/adapters/: anthropic_adapter.py  base.py  local_vllm_adapter.py  openai_adapter.py  transformer.py
gateway/ledger/: async_queue.py  base_store.py  store.py
gateway/policy/: budget.py  cache.py  circuit_breaker.py  guardrails.py  key_pool.py  pii.py  router.py
gateway/telemetry/: metrics.py  tracer.py
loadtest/: gateway_loadtest.py
tests/: test_adapter_translation.py  test_async_ledger.py  test_budget_enforcement.py  test_cache.py  test_circuit_breaker.py  test_complexity_routing.py  test_config_manager.py  test_dynamic_auth.py  test_failover_integration.py  test_fallback_model_mapping.py  test_guardrails.py  test_key_pool.py  test_pii.py  test_pii_vault.py  test_routing.py
