[project]
name = "llm-gateway"
version = "0.1.0"
description = "Enterprise-Grade LLM Gateway with Cost Control & Fallback Routing"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.31",
    "prometheus-client>=0.20.0",
    "streamlit>=1.36.0",
    "openai>=1.35.10",
    "anthropic>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.1",
    "locust>=2.29.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.hatch.build.targets.wheel]
packages = ["gateway", "dashboard"]
